--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -14,6 +14,16 @@
   display: none;
 }
 
+/* SECAO SUPERIOR */
+
+.superior__secao__container {
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+  overflow: scroll;
+  gap: 15px;
+}
+
 @media (min-width: 832px) {
   /* CABECALHO */
 
@@ -35,11 +45,74 @@
 .rodape__container {
   display: flex;
   /* direciona as linhas como coluna */
-    /* flex-direction: column; */
+  /* flex-direction: column; */
   /* quebra linhas  */
-    /* flex-wrap: wrap; */
+  /* flex-wrap: wrap; */
 
   /* faz a mesma coisa que utilizar:
  flex-direction: column e flex-wrap: wrap   */
   flex-flow: column wrap;
+}
+
+/* MENU */
+.menu__container {
+  position: fixed;
+  bottom: 0%;
+  height: 74px;
+  width: 100%;
+}
+
+.menu__lista:nth-child(2),
+.menu__lista:nth-child(3),
+.menu__lista:nth-child(4) {
+  display: none;
+}
+
+.menu__lista li {
+  align-self: center;
+}
+
+.menu__lista {
+  display: flex;
+  justify-content: space-around;
+  height: 100%;
+}
+.menu__itens {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+@media (min-width: 834px) {
+  .menu__container {
+    left: 0;
+    height: auto;
+    width: 74px;
+    top: 80px;
+  }
+
+  .menu__lista {
+    flex-direction: column;
+    justify-content: flex-start;
+    padding-top: 15px;
+    gap: 33px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .menu__container {
+    width: 230px;
+    overflow: scroll;
+  }
+
+  .menu__lista:nth-child(2),
+  .menu__lista:nth-child(3),
+  .menu__lista:nth-child(4) {
+    display: flex;
+  }
+
+  .menu__lista {
+    height: auto;
+    /* padding para limitar efeito hover nas listas laterais */
+    padding: 20px 17px 20px 15px;
+  }
 }
