--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -114,5 +114,12 @@
     height: auto;
     /* padding para limitar efeito hover nas listas laterais */
     padding: 20px 17px 20px 15px;
+    gap: 15px;
+  }
+
+  .menu__itens {
+    flex-direction: row;
+    gap: 15px;
+    align-items: center;
   }
 }
